# local-media-vault

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  db.py  main.py  security.py  storage.py
app/static/: app.js  index.html  styles.css
tests/: test_api.py  test_db.py  test_storage.py
