[project]
name = "local-media-vault"
version = "0.1.0"
description = "Local Wi-Fi personal media upload server"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "pydantic==2.10.5",
  "python-multipart==0.0.20",
  "qrcode==8.0",
  "uvicorn[standard]==0.34.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
